1:根据alibaba JAVA代码规范优化部分代码 2:增加公共参数功能 3:取消单个参数三次引用变量的限制，优化控制逻辑 4:增加包路径、方法名、参数、预期结果全路径引用参数，当遇到局部变量与全局变量同名时，优先使用局部变量 5:其他代码逻辑结构上的优化